--- a/css/contact.css
+++ b/css/contact.css
@@ -69,9 +69,12 @@ h2 {
 
 .box-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 20px;
   width: 75vw;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 img {
@@ -87,9 +90,10 @@ img {
 }
 
 .box {
-  flex: 1;
+  /* flex: 1; */
   padding: 20px 40px;
   margin: 0px;
+  width: 40%;
 }
 
 
@@ -209,4 +213,12 @@ input[type="checkbox"] {
   float: right !important;
   color: #19FFF1;
   font-size: calc(2vmin + 3px);
+}
+
+@media (max-width: 1070px) {
+  .box {width: 75%;}
+
+  .contact-intro {
+    font-size: 2.6vw;
+  }
 }
