--- a/css/navigation.css
+++ b/css/navigation.css
@@ -81,6 +81,7 @@ body {
   /* border: 1px solid #5897D2;   */
   width: 100%;
   padding: 2px;
+  font-size: 4vw;
 }
 
 
