--- a/css/projects.css
+++ b/css/projects.css
@@ -148,7 +148,7 @@ img {
   }
 
   .sec1 {
-    padding-top: 20vh;
+    padding-top: 25vh;
     padding-bottom: 5vh;
   }
   .sec2  {
